--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>account-service</module>
     <module>transaction-service</module>
     <module>api-gateway</module>
+    <module>discovery-server</module>
   </modules>
 
   <properties>
