--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>transaction-service</module>
     <module>api-gateway</module>
     <module>discovery-server</module>
+    <module>config-server</module>
   </modules>
 
   <properties>
