Spring Cloud Config Server Setup and Architecture Optimization

--- a/config-server/src/main/resources/config-repo/api-gateway.yml
+++ b/config-server/src/main/resources/config-repo/api-gateway.yml
@@ -7,32 +7,30 @@ spring:
   cloud:
     gateway:
       routes:
+        # 用户注册和登录（不需要认证）
         - id: user-public
           uri: lb://USER-SERVICE
           predicates:
             - Path=/api/users/register,/api/users/login
             - Method=POST
 
+        # 用户其他接口（暂时不使用认证）
         - id: user-protected
           uri: lb://USER-SERVICE
           predicates:
             - Path=/api/users/**
-          filters:
-            - name: JwtAuthentication
 
+        # 账户服务（暂时不使用认证）
         - id: account-service
           uri: lb://ACCOUNT-SERVICE
           predicates:
             - Path=/api/accounts/**
-          filters:
-            - name: JwtAuthentication
 
+        # 交易服务（暂时不使用认证）
         - id: transaction-service
           uri: lb://TRANSACTION-SERVICE
           predicates:
             - Path=/api/transactions/**
-          filters:
-            - name: JwtAuthentication
 
       globalcors:
         cors-configurations:
