--- a/config-server/src/main/resources/config-repo/user-service.yml
+++ b/config-server/src/main/resources/config-repo/user-service.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     username: root
     password: marcoreus
     driver-class-name: com.mysql.cj.jdbc.Driver
