--- a/config-server/src/main/resources/config-repo/application.yml
+++ b/config-server/src/main/resources/config-repo/application.yml
@@ -30,3 +30,4 @@ logging:
     org.springframework.amqp: DEBUG
     org.springframework.amqp.rabbit: DEBUG
     com.example.fintech.common.config: DEBUG
+    com.example.fintech.common.service: DEBUG
