--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <scope>import</scope>
       </dependency>
 
-      <!-- Lombok版本管理 -->
+      <!-- Lombok Version Management -->
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
