--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <scope>import</scope>
       </dependency>
 
-      <!-- Lombok Version Management -->
+      <!-- 添加这个Lombok依赖管理 -->
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
@@ -82,6 +82,7 @@
           <configuration>
             <release>21</release>
             <encoding>UTF-8</encoding>
+            <!-- 确保注解处理器配置 -->
             <annotationProcessorPaths>
               <path>
                 <groupId>org.projectlombok</groupId>
